<resources>
    <string name="divider">-</string>
    <string name="alphabet">a bcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="alphanumeric">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="textAlphanumeric">0 123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="textCapital">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="numeric">0123456789</string>
    <string name="num_pad_input_icon_description">Input Icon</string>
    <string name="list_transaction_filter_date_title_label_information">Tanggal</string>
    <string name="dashboard_dialog_transaction_detail_colon">:</string>
    <string name="dashboard_dialog_transaction_detail_tv_label_queue_number">generalBankerCustomerDetailQueueNumberTitleLabel</string>
    <string name="dashboard_dialog_transaction_detail_tv_label_source">generalBankerCustomerDetailBranchNameTitleLabel</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="common_pass_try_again">tryAgain</string>
    <string name="button_general_error_try_again">commonGeneralErrorTryAgainButton</string>
    <string name="button_general_error_back">commonGeneralErrorTryAgainButton</string>
    <string name="button_general_error_close">commonGeneralErrorMaxRetryCloseButton</string>
    <string name="button_general_error_max_retry_close">Tutup Aplikasi</string>
    <string name="webview_base_path">file:///android_asset/</string>
    <string name="webview_mime_type">text/html</string>
    <string name="webview_encoding">UTF-8</string>
    <string name="webview_stylesheet"><![CDATA[<html><style type=\'text/css\'>@font-face { font-family: tt_interphases_regular; src: url(\'fonts/tt_interphases_regular.ttf\'); } body {font-family: tt_interphases_regular;}</style><body>]]></string>
    <string name="webview_stylesheet_suffix"><![CDATA[</body></html>]]></string>
    <string name="progress_bar_waiting_label">progressBarWaitingTitle</string>
    <string name="item_receipt_transaction_receipt_number_label">transactionResultReceiptNumberTitleLabel</string>
    <string name="item_receipt_transaction_type_withdrawal">transactionResultTransactionTypeCashWithdrawalLabel</string>
    <string name="item_receipt_transaction_type_deposit">transactionResultTransactionTypeCashDepositLabel</string>
    <string name="item_receipt_transaction_amount_label">transactionResultTotalAmountTitleLabel</string>
    <string name="item_receipt_transaction_news_label">transactionResultTransactionNotesLabel</string>
    <string name="content_summary_transaction_detail_debet">Debet Rekening</string>
    <string name="content_summary_transaction_detail_total">transactionResultSummaryDetailTitle</string>
    <string name="content_summary_transaction_detail_amount_label">transactionResultCashDepositDetailsAmountDetailSecTrxAmountTitleLabel</string>
    <string name="content_summary_transaction_detail_fee_label">transactionResultCashDepositDetailsAmountDetailSecTrxFeeTitleLabel</string>
    <string name="content_summary_transaction_detail_total_amount_label">transactionResultCashDepositDetailsAmountDetailSecTotalAmountTitleLabel</string>
    <string name="content_summary_transaction_detail_amount_counted_label">Terbilang</string>
    <string name="dialog_input_otp_title">inputOtpLoginGbTitleLabel</string>
    <string name="dialog_input_otp_loading_input_desc">inputOtpLoginLoadingVerificationDescLabel</string>
    <string name="dialog_input_otp_loading_input_title">inputOtpLoginLoadingVerificationTitleLabel</string>
    <string name="dialog_input_otp_loading_type_status">Loading</string>
    <string name="dialog_input_connection_error">Terjadi kesalahan, silakan coba lagi.</string>
    <string name="dialog_detail_data_not_found">Terjadi Kesalahan, data tidak ditemukan.</string>
    <string name="input_otp_info_retry_on">inputOtpLoginGbResendCountdownLabel</string>
    <string name="error_view_default_message_label">commonGeneralErrorTitleLabel</string>
    <string name="error_view_default_message_reload_label">commonGeneralErrorReloadButton</string>
    <string name="dialog_no_internet_title">commonInternetConnectionTitleLabel</string>
    <string name="dialog_no_internet_message">commonInternetConnectionDescLabel</string>
    <string name="dialog_transaction_detail_print_button_label">generalBankerCustomerDetailTransactionPhotoOverlayPrintTransactionForm</string>
    <string name="dialog_transaction_detail_total_cash_deposit">generalBankerCustomerDetailTransactionTotalTrxCashDepositTitleLabel</string>
    <string name="dialog_transaction_detail_list_transaction">generalBankerCustomerDetailTodayTransactionTitleLabel</string>
    <string name="timer_title_label">generalBankerWaitReservationDurationTimeTitleLabel</string>
    <string name="dialog_logout_tv_title">headerTopBarLogoutOptionLogoutTitleLabel</string>
    <string name="dialog_logout_tv_desc">headerTopBarLogoutOptionLogoutDescriptionLabel</string>
    <string name="dialog_logout_btn_gb_tablet">headerTopBarLogoutOptionLogoutGbButton</string>
    <string name="dialog_logout_btn_customer_tablet">headerTopBarLogoutOptionLogoutCustomerButton</string>
    <string name="dialog_logout_tv_back">headerTopBarLogoutOptionLogouBackButton</string>
    <string name="dialog_cancellation_text_error_reason">transactionOverviewTextFieldCanceInlineErrorButton</string>
    <string name="dialog_cancellation_text_hint">transactionOverviewTextFieldCancelButton</string>
    <string name="dialog_cancellation_first_text_count">0</string>
    <string name="dialog_cancellation_text_count_to">/</string>
    <string name="dialog_cancellation_second_text_count">150</string>
    <string name="dialog_cancellation_button_back">transactionOverviewCancelTransactionCancelButton</string>
    <string name="dialog_cancellation_button_verify_next">transactionOverviewCancelTransactionNextButton</string>
    <string name="auth_segment_label_login_gb">loginGBTabButtonContainer</string>
    <string name="auth_segment_label_login_customer">loginCustomerTabButtonContainer</string>
    <string name="confirmation_transaction_destination_to_account_title">transactionConfirmationLandingToAccountLabel</string>
    <string name="confirmation_transaction_cancel">transactionConfirmationLandingCancelButton</string>
    <string name="confirmation_transaction_edit">transactionConfirmationLandingEditButton</string>
    <string name="confirmation_transaction_news">transactionConfirmationLandingTransactionNoteLabel</string>
    <string name="confirmation_transaction_type_title">transactionConfirmationLandingTransactionTypeLabel</string>
    <string name="confirmation_transaction_destination_title">transactionConfirmationLandingTransactionPurposeLabel</string>
    <string name="confirmation_transaction_phone_number_title">transactionConfirmationLandingPhoneNumberLabel</string>
    <string name="confirmation_transaction_nominal_title">transactionConfirmationLandingTransactionAmountLabel</string>
    <string name="confirmation_transaction_source_title">transactionConfirmationLandingSourceFundLabel</string>
    <string name="confirmation_transaction_email_title">transactionConfirmationLandingEmailLabel</string>
    <string name="confirmation_transaction_account_name_title">transactionConfirmationLandingDepositCustomerNameLabel</string>
    <string name="confirmation_transaction_method_title">transactionConfirmationLandingTransactionMethodLabel</string>
    <string name="confirmation_transaction_source_account_title">transactionConfirmationLandingFromAccountLabel</string>
    <string name="confirmation_transaction_account_owner_name_title">transactionConfirmationLandingWithdrawalFromAccountLabel</string>
    <string name="confirmation_transaction_fee_title">transactionConfirmationLandingFeeLabel</string>
    <string name="confirmation_transaction_title_screen">transactionConfirmationLandingConfirmationLabel</string>
    <string name="card_transaction_overview_success_label">transactionOverviewDetailSuccessLabel</string>
    <string name="card_transaction_overview_failed_label">transactionOverviewDetailFailedLabel</string>
    <string name="card_transaction_overview_cancel_by_customer_label">transactionOverviewDetailCancelByCustLabel</string>
    <string name="card_transaction_overview_cancel_by_gb_label">transactionOverviewDetailCancelByGbLabel</string>
    <string name="card_transaction_overview_not_process_label">transactionOverviewDetailInBranchLabel</string>
    <string name="card_transaction_choose_transaction_label">transactionOverviewAddButton</string>
    <string name="card_transaction_cancel_choose_transaction_label">transactionOverviewRemoveButton</string>
    <string name="card_transaction_success_label">transactionConfirmationLandingSuccessStatusLabel</string>
    <string name="card_transaction_denunciation_success_label">transactionResultAccountMaintenanceDetailDenunciationTransactionStatusSuccessTitleLabel</string>
    <string name="card_transaction_failed_label">transactionConfirmationLandingFailedStatusLabel</string>
    <string name="card_transaction_cancel_label_gb">transactionConfirmationCancelByGb</string>
    <string name="card_transaction_denunciation_cancel_label_gb">transactionResultAccountMaintenanceDetailDenunciationTransactionStatusCancelByBankTitleLabel</string>
    <string name="card_transaction_cancel_label_customer">transactionConfirmationCancelByCustomer</string>
    <string name="card_transaction_denunciation_cancel_label_customer">transactionResultAccountMaintenanceDetailDenunciationTransactionStatusCancelByCustomerTitleLabel</string>
    <string name="card_transaction_wait_customer_confirmation_label">transactionConfirmationLandingCheckingWarkatPhotoToastLabel</string>
    <string name="card_transaction_see_details_label">transactionOverviewDetailButton</string>
    <string name="card_transaction_verified_label">transactionConfirmationLandingConfirmationStatusVerifiedDetailedLabel</string>
    <string name="card_transaction_type_customer_data_maintenance_label">transactionOverviewTransactionTypeCustomerDataMaintenanceLabel</string>
    <string name="card_transaction_checking_warkat_true_photo_label">transactionConfirmationLandingCheckingWarkatTruePhotoToastLabel</string>
    <string name="dialog_with_action_retry_label">commonGeneralErrorMaxRetryTryAgainButton</string>
    <string name="dialog_calender_button_cancel_label">Cancel</string>
    <string name="dialog_calender_button_choose_date_label">OK</string>
    <string name="agree_button_tnc_text">cashDepositWebViewTermsAndConditionPopUpBackButton</string>
    <string name="numeric_authorization_landing_pin_label">AuthVerificationNotActiveCardButtonLabel</string>
    <string name="debit_card_transaction_card_number_title">AuthChooseDebitProductNumberTitleLabel</string>
    <string name="debit_card_transaction_account_number_title">AuthChooseDebitAccountNumberTitleLabel</string>
    <string name="debit_card_transaction_status_active">AuthChooseDebitLandingActiveStatusLabel</string>
    <string name="debit_card_transaction_status_blocked">AuthChooseDebitLandingBlockStatusLabel</string>
    <string name="debit_card_transaction_status_expired">AuthChooseDebitLandingExpiredStatusLabel</string>
    <string name="debit_card_transaction_status_inactive">AuthChooseDebitLandingInactiveStatusLabel</string>
    <string name="dialog_detail_transaction_detail_total_cash_deposit">generalBankerCustomerDetailTransactionTotalTrxCashDepositTitleLabel</string>
    <string name="dialog_detail_transaction_detail_total_cash_withdrawal">generalBankerCustomerDetailTransactionTotalTrxCashWithdrawalLabel</string>
    <string name="dialog_cancellation_text_desc">transactionOverviewCancelTransactionDescriptionLabel</string>
    <string name="dialog_cancellation_text_title">transactionOverviewCancelTransactionTitleLabel</string>
</resources>